Fixed z-index of tooltip

--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@ th, td {
     pointer-events: none;
     display: none;
     opacity: 0;
+    z-index: 2;
 }
 
 #train-btn {
